Fix duplicate lib during install